# Kuramoto-Model

./: .app.py.3040089516~  .replit  README.md  app.py  modules.txt  pyproject.toml  replit.nix  requirements.txt  scripts.js  simulation1.py  simulation2.py
static/: styles.css
templates/: disc.html  home.html  intro.html  sim1.html  sim2.html  simulation.html  simulations.html
