[tool.poetry]
name = "repl-nix-kuramoto-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_kuramoto_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
matplotlib = "^3.9.0"
numba = "^0.60.0"
numpy = "^2.0.0"
sympy = "^1.12.1"
scipy = "^1.13.1"
memory-profiler = "^0.61.0"
tqdm = "^4.66.4"
quart = "^0.19.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
